--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,8 @@
 body{
     text-align: center;
     background-color: antiquewhite;
+    margin: 0;
+    padding: 0;
 }
 
 img{
@@ -9,11 +11,26 @@ img{
     border: 2px solid green;
     border-radius: 100%;
 }
-
+.container{
+    border: 3px solid hsl(120, 30%, 96%);
+    border-radius: 30px;
+    background-color: rgb(209, 216, 223);
+    width: 45rem;
+    height: 30rem;
+    margin: auto;
+    box-shadow: 10px 10px 10px rgba(0, 0, 0, 0.2);
+    margin-top: 3rem;
+    padding: 1rem;
+}
 div{
     font-size: larger;
     font-family: 'Courier New', Courier, monospace;
     font-style: italic;
     font-weight: bolder;
     margin: 1rem;
+}
+
+a{
+    text-decoration: none;
+    background-color: transparent;
 }
